[project]
name = "samrenderer"
version = "0.1.0"
description = "A tool to render SAM templates locally with SAM config overrides"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.76",
    "pyyaml>=6.0.3",
    "tomli>=2.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/samrenderer"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.5",
]

[project.scripts]
sam-render = "samrenderer.main:main"
