[project]
name = "samrenderer"
version = "0.0.0-dev"
description = "A tool to render SAM templates locally with SAM config overrides"
maintainers = [
  {name = "Ryan McLean", email = "ryan1_00@hotmail.com"}
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
keywords = ["SAM", "AWS", "Cloudformation", "Serverless Application Model"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.76",
    "pyyaml>=6.0.3",
    "tomli>=2.3.0",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "Programming Language :: Python :: 3.11",
]
[project.urls]
Repository = "https://github.com/ryanm101/samrenderer.git"
Issues = "https://github.com/ryanm101/samrenderer/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/samrenderer"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.5",
]

[tool.pytest.ini_options]
addopts = "--cov=samrenderer --cov-report=term-missing --cov-fail-under=80"

[project.scripts]
sam-render = "samrenderer.main:main"
